--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,2 +1,12 @@
+/*
+* Third Party
+*/
+@import "../../bower_components/normalize.css/normalize.css";
+
+/*
+* Custom
+*/
+@import "partials/app";
+
 @import "partials/responsive";
 @import "partials/con";
