--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,3 +1,22 @@
 <section class="header">
-    Header
+<div class="background-header">
+    <div class="menu-left-header">
+        <ul>
+            <li>About us</li>
+            <li>Reservation</li>
+            <li>Gallery</li>
+        </ul>
+    </div>
+    <div class="logo-center-header">
+        <img src="../img/logo.png">
+        <h1>YOGA</h1>
+    </div>
+    <div class="menu-right-header">
+        <ul>
+            <li>Blog</li>
+            <li>Elements</li>
+            <li>Shop</li>
+        </ul>
+    </div>
+</div>
 </section>
