--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,10 +1,11 @@
 <section class="header">
 <div class="background-header">
+    <div class="menu-all-header">
     <div class="menu-left-header">
         <ul>
-            <li>About us</li>
-            <li>Reservation</li>
-            <li>Gallery</li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Reservation</a></li>
+            <li><a href="#">Gallery</a></li>
         </ul>
     </div>
     <div class="logo-center-header">
@@ -13,10 +14,11 @@
     </div>
     <div class="menu-right-header">
         <ul>
-            <li>Blog</li>
-            <li>Elements</li>
-            <li>Shop</li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Elements</a></li>
+            <li><a href="#">Shop</a></li>
         </ul>
+    </div>
     </div>
 </div>
 </section>
