--- a/src/style/partials/_fonts.scss
+++ b/src/style/partials/_fonts.scss
@@ -7,3 +7,13 @@
   font-family: "Champagne&Limousines";
   src: url(../fonts/Champagne&Limousines-Bold/Champagne&Limousines-Bold.ttf);
 }
+
+@font-face {
+  font-family: "Open Sans Bold";
+  src: url(../fonts/OpenSans-Bold/OpenSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Freestyle Script";
+  src: url(../fonts/Freestyle-Script/Freestyle-Script.TTF);
+}
