--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,5 +1,7 @@
 <section class="header">
 <div class="background-header">
+    <nav class="main-nav">
+        <div class="container">
     <div class="menu-all-header">
     <div class="menu-left-header">
         <ul>
@@ -20,5 +22,22 @@
         </ul>
     </div>
     </div>
+        </div>
+    </nav>
 </div>
+
+    <div class="background-header-two">
+        <div class="background-info-header-two">
+            <div class="communications-header-two">
+
+            </div>
+
+            <div class="text-header-two">
+                <h1>Just Balance</h1>
+                <h2>your Mind & Body</h2>
+                <h3>Create the healthy living</h3>
+                <p>for yourself</p>
+            </div>
+        </div>
+    </div>
 </section>
