--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,4 +14,5 @@
 @import "partials/responsive";
 @import "partials/conf";
 @import "partials/fonts";
+@import "partials/ adhesive-menu";
 @import "partials/header";
