--- a/src/style/partials/_header.scss
+++ b/src/style/partials/_header.scss
@@ -3,12 +3,16 @@
   height: auto;
 
   .menu-all-header {
+    text-align: center;
+    padding-top: 10px;
 
 
     .menu-left-header {
       display: inline-block;
       width: 33.33%;
       float: left;
+      padding-top: 25px;
+      text-align: right;
 
 
       ul {
@@ -24,6 +28,12 @@
           a {
             text-decoration: none;
             color: #555555;
+
+            &:hover,
+            &:active {
+              color: #5363db;
+              border-bottom: 1px solid;
+            }
           }
         }
       }
@@ -32,19 +42,22 @@
     .logo-center-header {
       display: inline-block;
       width: 33.33%;
-      text-align: center;
+      float: left;
 
       h1 {
         font-family: "Champagne&Limousines",Arial,sans-serif;
         font-size: 24pt;
         color: #5363db;
+        margin: 0;
       }
     }
 
     .menu-right-header {
       display: inline-block;
       width: 33.33%;
-      float: right;
+      float: left;
+      padding-top: 25px;
+      text-align: left;
 
 
       ul {
@@ -60,9 +73,26 @@
           a {
             text-decoration: none;
             color: #555555;
+
+            &:hover,
+            &:active {
+              color: #5363db;
+              border-bottom: 1px solid;
+            }
           }
         }
       }
     }
+  }
+}
+
+.background-header-two {
+  height: auto;
+  background: url("../img/background-header.jpg") no-repeat;
+  background-size: cover;
+  background-position: 0 100px;
+
+  .background-info-header-two {
+    padding-top: 110px;
   }
 }
