--- a/src/template/header.html
+++ b/src/template/header.html
@@ -29,13 +29,27 @@
     <div class="background-header-two">
         <div class="background-info-header-two">
             <div class="communications-header-two">
-
+                <div class="back-all-in">
+                <h3>Trial Class</h3>
+                <form class="form-inline">
+                <input type="text" class="input-small input-style" placeholder="Enter your name">
+                <input type="tel" class="input-small input-style" placeholder="Enter your phone">
+                <select class="input-style">
+                    <option>Chose your class</option>
+                    <option>Chose your class</option>
+                    <option>Chose your class</option>
+                </select>
+                    <div class="but-style">
+                <button type="button" class="btn ntb">Try it</button>
+                    </div>
+                </form>
+                </div>
             </div>
 
             <div class="text-header-two">
                 <h1>Just Balance</h1>
                 <h2>your Mind & Body</h2>
-                <h3>Create the healthy living</h3>
+                <p>Create the healthy living</p>
                 <p>for yourself</p>
             </div>
         </div>
