--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,9 +10,10 @@
 
 
 
-
+@import "partials/stylereset";
 @import "partials/responsive";
 @import "partials/conf";
 @import "partials/fonts";
 @import "partials/ adhesive-menu";
+@import "partials/content";
 @import "partials/header";
