--- a/src/style/partials/_fonts.scss
+++ b/src/style/partials/_fonts.scss
@@ -17,3 +17,8 @@
   font-family: "Freestyle Script";
   src: url(../fonts/Freestyle-Script/Freestyle-Script.TTF);
 }
+
+@font-face {
+  font-family: "Open Sans Regular";
+  src: url(../fonts/OpenSans-Regular/OpenSans-Regular.ttf);
+}
