--- a/src/style/partials/_header.scss
+++ b/src/style/partials/_header.scss
@@ -120,6 +120,10 @@
         height: 370px;
         border-radius: 30px;
         display: inline-block;
+
+        @include respond(phone) {
+          width: auto;
+        }
       }
 
       h3 {
