--- a/src/style/partials/_content.scss
+++ b/src/style/partials/_content.scss
@@ -35,6 +35,7 @@
       background-color: #fff;
       margin: 10px 0;
 
+
       @include respond(phone) {
         width: 100%;
       }
@@ -294,6 +295,10 @@
             a {
               color: #fff;
               text-decoration: none;
+
+              &:hover {
+                box-shadow: -1px 1px 20px 20px rgb(91, 108, 235);
+              }
             }
           }
         }
@@ -409,4 +414,11 @@
       }
     }
   }
+}
+
+.hovered {
+  -webkit-box-shadow: 2px 0 113px 24px rgba(0,89,255,0.75);
+  -moz-box-shadow: 2px 0 113px 24px rgba(0,89,255,0.75);
+  box-shadow: 2px 0 113px 24px rgba(0,89,255,0.75);
+  border: 2px solid #4fa8cf;
 }
